--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-native-firebase/storage": "^18.7.3",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@types/react": "~18.2.14",
+    "axios": "^1.6.5",
     "expo": "~49.0.15",
     "expo-app-loading": "^2.1.1",
     "expo-asset": "~8.10.1",
@@ -25,8 +27,7 @@
     "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
