--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
