--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^2.0.1",
     "@types/react": "~18.2.14",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
@@ -28,8 +29,8 @@
     "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "typescript": "^5.1.3",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "13.9.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
