Profile Screen Updated - Order History is being maintained

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-svg": "13.9.0",
     "typescript": "^5.1.3"
   },
